--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ a:hover {
     font-size: large;
     font-weight: normal;
     color: #004a6c;
+    text-align: left;
 }
 
 /* .entry_description {
