--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 html {
     scroll-behavior: smooth;
+    --line-height: 1.2;
+    --n-line-preview: 4em;
+    --bg-color: #F2F2F2;
+    --text-color: rgb(87, 86, 86);
+    /* --accent-color: #004a6c; */
+    --accent-color: rgb(131, 4, 4);
+    /* --hover-color: #8FC1E3; */
+    --hover-color: #e18158;
   }  
 
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #F2F2F2;
+    background-color: var(--bg-color);
     margin: 0;
     padding: 0;
 }
@@ -14,11 +22,11 @@ h1 {
     font-weight: bold;
     margin-bottom: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--text-color);
 }
 
 h2 {
-    color: #004a6c;
+    color: var(--accent-color);
     font-size: large;
 }
 
@@ -31,7 +39,7 @@ h3 {
 p {
     font-weight: lighter;
     text-align: justify;
-    color: rgb(87, 86, 86);
+    color: var(--text-color);
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -57,13 +65,13 @@ header a {
     text-decoration: none;
     font-size: large;
     font-weight: normal;
-    color: #004a6c;
+    color: var(--accent-color);
     padding-left: 20px;
     padding-right: 20px;
 }
 
 header a:hover {
-    color: #8FC1E3;
+    color: var(--hover-color);
 }
 
 header button {
@@ -121,12 +129,12 @@ header button:hover {
 
 a {
     text-decoration: none;
-    color: #004a6c;
+    color: var(--accent-color);
     font-weight: bolder;
 }
 
 a:hover {
-    color: #8FC1E3;
+    color: var(--hover-color);
 }
 
 #content {
@@ -179,10 +187,38 @@ a:hover {
 .entry_title {
     font-size: large;
     font-weight: normal;
-    color: #004a6c;
+    color: var(--accent-color);
     text-align: left;
 }
 
+.fold {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    line-height: var(--line-height);
+}
+
+.fold p {
+    max-height: calc(var(--line-height)*var(--n-line-preview));
+    overflow-y: hidden;
+    transition: max-height .8s ease-out;
+    margin-bottom: 1em;
+}
+
+.fold input[type="button"] {
+    text-align: center;
+    border: none;
+    border-radius: 15px;
+    width: 40px;
+    cursor: pointer;
+    margin-top: -1em;
+    z-index: 1;
+    font-family: FontAwesome;
+    font-size: larger;
+    color: var(--accent-color);
+    /* box-shadow: 0px -2px 15px 5px var(--bg-color); */
+    background-color: rgba(255, 255, 255, 0);
+}
 /* .entry_description {
     max-height: 60px;
     margin-bottom: 7px;
@@ -210,15 +246,15 @@ a:hover {
 } */
 
 .detail_text {
-    color: rgb(87, 86, 86);
+    color: var(--text-color);
     font-size: smaller;
 }
 .link_field {
     text-decoration: none;
-    color: #004a6c;
+    color: var(--accent-color);
     font-size: smaller;
     font-weight: normal;
-    border: 2px solid #004a6c;
+    border: 2px solid var(--accent-color);
     border-radius: 25px;
     padding-left: 7px;
     padding-right: 7px;
@@ -227,11 +263,11 @@ a:hover {
     margin-left: 4px;
 }
 /* .link_field:hover {
-    color: #8FC1E3;
-    border: 2px solid #8FC1E3;
+    color: var(--hover-color);
+    border: 2px solid var(--hover-color);
 } */
 .link_field:hover {
-    background-color: #004a6ce2;
+    background-color: var(--accent-color);
     color: white;
 }
 
@@ -264,7 +300,7 @@ td:last-child {
 
 .highlight {
     font-weight: normal;
-    color: #004a6c;
+    color: var(--accent-color);
 }
 
 @media screen and (max-width: 700px) {
