--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,8 @@ a {
     text-decoration: none;
     color: var(--accent-color);
     font-weight: bolder;
+    z-index: 100;
+    position: relative;
 }
 
 a:hover {
@@ -302,6 +304,77 @@ td:last-child {
     font-weight: normal;
     color: var(--accent-color);
 }
+
+/* Timeline Container */
+.timeline {
+    padding: 20px;
+  }
+  
+  /* Card container */
+  .card {
+    position: relative;
+  }
+  
+  /* setting padding based on even or odd */
+  .card {
+    padding: 0 0 0 30px;
+  }
+  /* Global ::before */
+  .card::before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    border: solid var(--accent-color);
+    left: 0px;
+    top: -4.5px;
+    bottom: -4.5px;
+    border-width: 0 0 0 5px;
+  }
+  
+  /* Removing the border if it is the first card */
+  .card:first-child::before {
+    border-top: 0;
+    border-top-left-radius: 0;
+  }
+  
+  /* Removing the border if it is the last card  and it's odd */
+  .card:last-child::before {
+    border-bottom: 0;
+    border-bottom-left-radius: 0;
+    bottom: 25px;
+  }
+
+  /* Information about the timeline */
+  .info {
+    display: flex;
+    flex-direction: column;
+    color: gray;
+    border-radius: 10px;
+    padding: 10px;
+  }
+  
+  /* Title of the card */
+  .title {
+    color: var(--accent-color);
+    position: relative;
+  }
+  
+  /* Timeline dot  */
+  .title::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: var(--bg-color);
+    border-radius: 999px;
+    border: 3px solid var(--accent-color);
+  }
+  
+  /* setting dot to the left if the card is odd */
+  .card > .info > .title::before {
+    left: -45px;
+  }
+
 
 @media screen and (max-width: 700px) {
     /* h1 {
