--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@ html {
     --bg-color: #F2F2F2;
     --text-color: rgb(87, 86, 86);
     /* --accent-color: #004a6c; */
-    --accent-color: rgb(131, 4, 4);
+    /* --accent-color: rgb(131, 4, 4); */
+    --accent-color: rgb(57, 57, 119);
     /* --hover-color: #8FC1E3; */
-    --hover-color: #e18158;
+    /* --hover-color: #e18158; */
+    --hover-color: rgb(101, 146, 230);
   }  
 
 body {
